<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="left|center_vertical"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/li_tv_status_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/superuser_listheader_status"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/li_iv_co2_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_icon_co2_missing"
                android:scaleType="centerCrop"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/li_iv_temperature_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_icon_temperature_missing"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/li_tv_sitename_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/superuser_listheader_location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/li_tv_sitename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/li_tv_co2value_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/superuser_listheader_co2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/li_tv_co2value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/li_tv_temperaturevalue_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/superuser_listheader_temperature"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/li_tv_temperaturevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/li_tv_humidityvalue_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/superuser_listheader_humidity"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/li_tv_humidityvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>